--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
-    border: 3px solid black;
-    font-family: 'Times New Roman', Times, serif;
+    /* border: 3px solid black;  */
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -9,18 +9,17 @@ body{
     align-items: center;
     height: 100vh;
     margin: 0px;
-   
-
 }
 
 .game-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center; 
-    border: 3px solid red;
-    height: 500px;
-    width:  500px;
-    gap:20px;
+    max-width: 700px;
+    min-width: auto;
+    gap: 25px;
+    margin-top: 25px;
 }
 
 .main-heading{
@@ -30,15 +29,28 @@ body{
     width:100%;
     position: relative;
     text-align: center;
-    color: black;
+    color: white;
     font-size: 2.2em;
-   
 }
 
-.text-over-img {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-  }
+.btn-container{
+    display: flex;
+    gap:25px;
+}
+
+.selection-btn{
+    width: 100px;
+    height: 35px;
+    background-color: darkseagreen;
+    color: white;
+    font-weight: bold;
+    font-size: 1.25em;
+    border-radius: 10px;
+}
+
+#game-img{
+    border-radius: 10px;
+}
+
+
+
