--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    /* border: 3px solid black;  */
+     /* border: 3px solid black;     */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -9,17 +9,19 @@ body{
     align-items: center;
     height: 100vh;
     margin: 0px;
+   
 }
 
 .game-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     justify-content: center;
     align-items: center; 
-    max-width: 700px;
+    flex-wrap: wrap;
+    max-width: auto;
     min-width: auto;
     gap: 25px;
-    margin-top: 25px;
+   
 }
 
 .main-heading{
@@ -31,6 +33,7 @@ body{
     text-align: center;
     color: white;
     font-size: 2.2em;
+   
 }
 
 .btn-container{
@@ -50,6 +53,32 @@ body{
 
 #game-img{
     border-radius: 10px;
+}
+
+.game-text{
+    font-size: 1.25em;
+}
+
+.score-board-container 
+{
+    width: 700px;
+    height:200px;
+    display:flex;
+    justify-content: space-between;
+
+ 
+}
+.score-box-left { 
+    width: 200px;
+    height: 200px;
+    text-align: left;
+    
+}
+
+.score-box-right{
+    width: 200px;
+    height: 200px;
+    text-align: left;
 }
 
 
