--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-      /*border: 3px solid black;  */ 
+      /* border: 1px solid black;    */
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -38,6 +38,7 @@ body{
 
 .btn-container{
     display: flex;
+ 
     gap:25px;
 }
 
@@ -72,14 +73,21 @@ body{
 .score-box-left { 
     width: 200px;
     height: 200px;
-    text-align: left;
-    
+    text-align: center;
+   
 }
 
 .score-box-right{
     width: 200px;
     height: 200px;
-    text-align: left;
+    text-align: center;
+}
+
+.score-box-middle{
+   text-align: center;
+    width: 295px;
+
+
 }
 
 
